[package]
name = "flowrun"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
flowmaid = "0.19.0"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
# GUI desktop (opsional) — CLI tetap ringan tanpa feature ini.
eframe = { version = "0.29", optional = true, default-features = false, features = ["glow", "default_fonts"] }
rfd = { version = "0.15", optional = true }

[features]
gui = ["dep:eframe", "dep:rfd"]

[[bin]]
name = "flowrun-gui"
path = "src/bin/flowrun_gui.rs"
required-features = ["gui"]
